--- a/buildout.cfg
+++ b/buildout.cfg
@@ -34,6 +34,7 @@ parts +=
 
 [versions]
 ######### Buildout recipe #########
+z3c.dependencychecker = 1.11
 createzopecoverage = 1.5
 collective.recipe.omelette = 0.16
 collective.recipe.plonesite = 1.8.2
@@ -72,6 +73,10 @@ iw.debug = 0.3
 # Required by:
 # iw.debug==0.3
 ipdb = 0.8
+
+# Required by:
+# ploneconf2014.theme==0.1
+z3c.jbot = 0.7.1
 
 [checkversions]
 recipe = zc.recipe.egg
